--- a/Site2/css/styles.css
+++ b/Site2/css/styles.css
@@ -5,9 +5,9 @@ body {
 }
 
 h1 {
-    margin-top: 30px;
-    font-size: 60px;
+    font-size: 90px;
     font-family: "Pinyon Script";
+    margin-bottom: 20px;
 }
 
 hr {
@@ -36,6 +36,7 @@ p {
 
 strong {
     font-family: verdana, sans-serif;
+
 }
 
 .bottom {
@@ -45,42 +46,41 @@ strong {
 
 .cloud {
     position: absolute;
-    width: 10%;
-    left: 37%;
+    width: 15%;
+    left: 30%;
 }
 
 .cloud2 {
     position: absolute;
-    width: 10%;
-    left: 54%;
+    width: 15%;
+    left: 55%;
 }
 
 .header {
-    height: 200px;
+    height: 505px;
+    padding-top: 30px;
+    margin-top: 0px;
     background-color: rgb(222, 240, 255);
-    padding: 50px;
     text-align: center;
 }
 
 #mountImg {
     position: relative;
-    width: 50%;
-    left: 25%;
-    bottom: 0px;    
+    width: 60%;
+    margin: 0 auto;
 }
 
 .mountain {
     display: flex;
-    top: 200px;
-    height: 50%;
+    width: 100%;
+    bottom: 0px;
     background-color: rgb(222, 240, 255);
 }
 
 .middle {
     text-align: center;
-    padding-top: 20px;
+    padding-top: 50px;
 }
-
 
 .codeIMG {
     position: relative;
