--- a/Site2/css/styles.css
+++ b/Site2/css/styles.css
@@ -52,6 +52,10 @@ p {
     margin-bottom: 40px;
 }
 
+#lastP{
+    margin-bottom: 20px;
+}
+
 .p1 {
     text-align: center;
 }
@@ -109,34 +113,26 @@ strong {
 }
 
 .codeIMG {
-    position: relative;
     width: 25%;
-    margin-top: 10px;
-    top: 30px;
-    float: left;
-    left: 30px;
+    padding-top: 30px;
 }
 
+.skillP1 {
+    text-align: left;
+}
 
 .soccerIMG {
     position: relative;
     width: 15%;
-    margin-bottom: 15px;
-    margin-top: 20px;
-    float: right;
-    top: 10px;
-    right: 10px;
-    
+     
 }
 
 .table1 {
     position: relative;
-    left: 40px;
 }
 
 .table2 {
     position: relative;
-    right: 10px;
 }
 
 .profile {
