--- a/Site2/css/styles.css
+++ b/Site2/css/styles.css
@@ -123,6 +123,12 @@ strong {
     width: 90%;
 }
 
+.skillP2 {
+    text-align: center;
+    width: 90%;
+    padding-bottom: 10px;
+}
+
 .soccerIMG {
     position: relative;
     width: 10%;
