--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,62 @@ hr {
 
 h1 {
     color: #2841b2;
+    margin-left: 10px;
 }
 
 h2 {
     color: #2841b2;
+    margin-left: 10px;
 }
 
 h3 {
     color: #2841b2;
+    margin-left: 10px;
 }
 
+h4 {
+    margin-left: 10px;
+}
+
+#divEx {
+    width:100px;
+    height:100px;
+    background-color: yellow;
+    display: flex;
+    justify-content:center;
+    border: 20px solid;
+    padding: 40px;
+    margin: 20px;
+  }
+  
+  #boxP {
+    display:inline; 
+    align-self:center;
+  }
+
+  p {
+    width: 80%;
+    margin-left: 10px;
+  }
+
+  .btn {
+    background: #4f98f7;
+    background-image: -webkit-linear-gradient(top, #4f98f7, #1d477e);
+    background-image: -moz-linear-gradient(top, #4f98f7, #1d477e);
+    background-image: -ms-linear-gradient(top, #4f98f7, #1d477e);
+    background-image: -o-linear-gradient(top, #4f98f7, #1d477e);
+    background-image: linear-gradient(to bottom, #4f98f7, #1d477e);
+    -webkit-border-radius: 30;
+    -moz-border-radius: 30;
+    border-radius: 30px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 30px 10px 29px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #4f98f7;
+    text-decoration: none;
+  }
