--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,10 @@ h4 {
   }
 
   p {
-    width: 80%;
+    width: 90%;
     margin-left: 10px;
+    text-align: left;
+    line-height: 1.5;
   }
 
   .btn {
@@ -77,3 +79,13 @@ h4 {
     background: #4f98f7;
     text-decoration: none;
   }
+
+  .form1 {
+    margin-left: 10px;
+  }
+
+  #ul1{
+    max-width: 50%;
+  }
+
+
