--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/css/styles.css
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/css/styles.css
@@ -1,12 +1,18 @@
+body {
+    font-family: "Montserrat";
+}
+
 #title {
     background-color: #ff4c68;
+    padding-bottom: 3%;
 }
 
 #head1 {
     font-family: "Montserrat";
     font-weight: 900;
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
+    color: white
 }
 
 .container-fluid {
@@ -16,3 +22,132 @@
 .btn {
     margin-right: 10px;
 }
+
+.dlBtn {
+    margin-top: 5%;
+}
+
+.phone {
+    transform: rotate(25deg);
+}
+
+.navbar-brand {
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.navbar {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.nav-item {
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+}
+
+.nav-link {
+    font-size: 18px;
+    font-family: "Montserrat";
+    font-weight: 200;
+}
+
+.h3features {
+    font-family: "Montserrat";
+    font-weight: 900;
+    font-size: 22px;
+    text-align: center;
+}
+
+.pfeatures {
+    font-family: "Montserrat";
+    font-weight: 200;
+    text-align: center;
+}
+
+#features {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: white;
+    position: relative;
+}
+
+.featureIcon {
+    color: #ff4c68;
+    font-size: 70px;
+    padding-bottom: 15px;
+}
+
+.featureIcon:hover {
+    color: #ff899a;
+}
+
+#testimonials {
+    text-align: center;
+    background-color: #ff4c68;
+    font-family: "Montserrat";
+    color: white;
+}
+
+#h2test {
+    font-weight: 600;
+    padding-bottom: 5%
+}
+
+#testIMG {
+    border-radius: 100%;
+    height: 100px;
+}
+
+#press {
+    padding: 5% 8% 10% 8%;
+    background-color: #ff4c68;
+}
+
+.pressIMG {
+    padding: 0 0 10% 0;
+    width: 80%;
+    margin: 0 auto;
+    max-width: 250px;
+}
+
+.carousel-item {
+    padding: 10% 15%;
+}
+
+#pricing {
+    padding: 5% 5%;
+}
+
+#h2Price {
+    padding: 2.5% 0;
+    font-family: "Montserrat";
+    font-weight: 700;
+    text-align: center;
+    font-size: 40px;
+}
+
+#pPrice {
+    font-family: "Montserrat";
+    font-weight: 200;
+    padding: 0 0 5% 0;
+    text-align: center;
+}
+
+.card {
+    margin: 5% 5%;
+}
+
+.card-header {
+    text-align: center;
+}
+
+.card-body {
+    height: 230px;
+}
+
+
+
