--- a/bootstrap/TinDog-Start-master/TinDog-Start-master/css/styles.css
+++ b/bootstrap/TinDog-Start-master/TinDog-Start-master/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 10%;
 }
 
 .btn {
@@ -29,6 +29,9 @@ body {
 
 .phone {
     transform: rotate(25deg);
+    position: absolute; 
+    margin-top: 20%; 
+    left: 30px;
 }
 
 .navbar-brand {
@@ -150,4 +153,19 @@ body {
 }
 
 
+#cta {
+    background-color: #ff4c68;
+    padding: 5% 5% 2.5% 5%;
+    text-align: center;
+    color: white;
+}
 
+#footer {
+    text-align: center;
+    padding-top: 2%;
+}
+
+
+.bottomDownload {
+    margin: 1.5% .75% 1.5% .75%;
+}
